Fix h4 text align

--- a/beta/styles/styles.css
+++ b/beta/styles/styles.css
@@ -114,6 +114,10 @@ h4 {
   text-align: center;
 }
 
+.details-column-heading {
+  text-align: left;
+}
+
 p {
   font-size: 0.875rem;
   font-weight: 400;
